--- a/java/pom.xml
+++ b/java/pom.xml
@@ -11,7 +11,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <description>
-	    bbescoin系统模块
+        freedrive demo
 	</description>
 
     <properties>
